white space issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -968,7 +968,7 @@ a.accordion-toggle  i{
 
 #partner h2,
 #partner h3 {
-    color: #fff;
+    color: black;
 }
 
 .partners ul {
